--- a/css/style.css
+++ b/css/style.css
@@ -565,17 +565,17 @@ body {
 }
 
 .practice__body {
-	/*margin: 0 -10px;*/
 	display: flex;
 	flex-wrap: wrap;
+	justify-content: center;
 }
 .practice__column {
 	padding: 0 20px;
 	flex: 0 1 20%;
 }
+
 @media (max-width: 1040px) {
 	.practice__column {
-		/*padding: 0 20px;*/
 		flex: 0 1 45%;
 		margin: 0 0 30px 0;
 	}
@@ -669,13 +669,11 @@ body {
 @media (max-width: 1040px) {
 	.howeare {
 		padding: 50px 0 100px 0;
-		/*border: 1px solid #000;*/
 	}
 }
 @media (max-width: 690px) {
 	.howeare {
-		padding: 40px 0 100px 0;
-		/*border: 1px solid #000;*/
+		padding: 40px 0 70px 0;
 	}
 }
 
@@ -900,6 +898,7 @@ body {
 	.clients__item img {
 		max-width: 40%;
 		padding-bottom: 10px;
+		padding-top: 20px;
 	}
 	
 }
